@@ -1,4 +1,5 @@
 Current
+Fixed: GITHUB-2273: Use SPI to load Guice modules (Bartosz Popiela)
 Fixed: GITHUB-2280: Prevent Retry from happening endlessly (Paweł Nadolski)
 Fixed: GITHUB-553:  Better error message when dealing with classes having both Constructor and Factory methods (Krishnan Mahadevan)
 Fixed: GITHUB-2267: RetryAnalyzer is not set properly and consistent when using dataprovider (Eric Kubenka)
